--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -90,7 +90,7 @@
                     android:textColor="@color/white" />
 
                 <TextView
-                    android:id="@+id/textView3"
+                    android:id="@+id/tv_register"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
@@ -102,14 +102,7 @@
 
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/tv_forgot_pasword"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:clickable="true"
-                android:text="¿Te has olvidado la contraseña?"
-                android:textAlignment="center"
-                android:textColor="@color/white" />
+
 
         </LinearLayout>
     </LinearLayout>
