--- a/app/src/main/res/layout/fragment_predict.xml
+++ b/app/src/main/res/layout/fragment_predict.xml
@@ -3,12 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.NavBar.PredictFragment">
+    tools:context=".ui.NavBar.predict.PredictFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_predict"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Settings" />
-
+        android:layout_height="match_parent" />
 </FrameLayout>
