--- a/app/src/main/res/layout/item_predict.xml
+++ b/app/src/main/res/layout/item_predict.xml
@@ -23,7 +23,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/tv_name_visit_team"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginEnd="40dp"/>
+        android:layout_marginEnd="60dp"/>
 
     <ImageView
         android:id="@+id/iv_visit_team"
@@ -56,10 +56,64 @@
         android:id="@+id/tv_score_home"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="60dp"
         android:text="0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tv_name_home_team"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="-"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/tv_score_visit"
+        app:layout_constraintStart_toEndOf="@+id/tv_score_home"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/tv_name_visit_team"
+        app:layout_constraintStart_toEndOf="@+id/tv_score_visit">
+
+        <Button
+            android:id="@+id/bt_score_visit_up"
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:text="Button" />
+
+        <Button
+            android:id="@+id/bt_score_visit_down"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Button" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/tv_score_home"
+        app:layout_constraintStart_toEndOf="@+id/tv_name_home_team">
+
+        <Button
+            android:id="@+id/bt_score_home_up"
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:text="Button" />
+        <Button
+            android:id="@+id/bt_score_home_down"
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:text="Button" />
+    </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
