--- a/app/src/main/res/layout/item_predict.xml
+++ b/app/src/main/res/layout/item_predict.xml
@@ -4,12 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="10dp">
+    android:padding="10dp"
+    android:background="#005c83">
 
     <ImageView
         android:id="@+id/iv_home_team"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -21,14 +22,15 @@
         android:layout_height="wrap_content"
         android:text="0"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/tv_name_visit_team"
+        app:layout_constraintStart_toEndOf="@+id/textView3"
+
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginEnd="60dp"/>
 
     <ImageView
         android:id="@+id/iv_visit_team"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -40,8 +42,9 @@
         android:layout_height="wrap_content"
         android:text="Real Madrid"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/iv_visit_team"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toStartOf="@+id/iv_visit_team"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.509" />
 
     <TextView
         android:id="@+id/tv_name_home_team"
@@ -59,7 +62,7 @@
         android:layout_marginStart="60dp"
         android:text="0"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/tv_name_home_team"
+        app:layout_constraintEnd_toStartOf="@+id/textView3"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -68,8 +71,8 @@
         android:layout_height="wrap_content"
         android:text="-"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/tv_score_visit"
-        app:layout_constraintStart_toEndOf="@+id/tv_score_home"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
@@ -78,20 +81,22 @@
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/tv_name_visit_team"
+
         app:layout_constraintStart_toEndOf="@+id/tv_score_visit">
 
         <Button
             android:id="@+id/bt_score_visit_up"
             android:layout_width="wrap_content"
             android:layout_height="20dp"
-            android:text="Button" />
+            android:text="Button"
+            android:background="@android:drawable/arrow_up_float"/>
 
         <Button
             android:id="@+id/bt_score_visit_down"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Button" />
+            android:text="Button"
+            android:background="@android:drawable/arrow_down_float"/>
     </LinearLayout>
 
     <LinearLayout
@@ -101,18 +106,21 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/tv_score_home"
-        app:layout_constraintStart_toEndOf="@+id/tv_name_home_team">
+       >
+
 
         <Button
             android:id="@+id/bt_score_home_up"
             android:layout_width="wrap_content"
             android:layout_height="20dp"
-            android:text="Button" />
+            android:text="Button"
+            android:background="@android:drawable/arrow_up_float"/>
         <Button
             android:id="@+id/bt_score_home_down"
             android:layout_width="wrap_content"
             android:layout_height="20dp"
-            android:text="Button" />
+            android:text="Button"
+            android:background="@android:drawable/arrow_down_float"/>
     </LinearLayout>
 
 
