--- a/app/src/main/res/layout/fragment_ranking.xml
+++ b/app/src/main/res/layout/fragment_ranking.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.NavBar.RankingFragment"
+    tools:context=".ui.NavBar.ranking.RankingFragment"
     android:background="#005c83">
 
 
@@ -74,6 +74,10 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_ranking"
+            android:layout_width="match_parent"
+            android:layout_height="300dp" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_ranking1"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </LinearLayout>
