--- a/app/src/main/res/layout/item_ranking.xml
+++ b/app/src/main/res/layout/item_ranking.xml
@@ -52,7 +52,8 @@
             android:layout_weight="1"
             android:text="500"
             android:textAlignment="center"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+            />
     </LinearLayout>
 
 
